changed words idk

--- a/Website/index.html
+++ b/Website/index.html
@@ -34,9 +34,9 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>I just stole this whole ass website</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Peace Tranquility Safety Delight</h1>
+							<p>We're going to give you PTSD<br />
+							but like the good one</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
