--- a/Website/index.html
+++ b/Website/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1>Peace Tranquility Safety Delight</h1>
 							<p>We're going to give you PTSD<br />
-							but like the good one</p>
+							but like the good one, not the one you're trying to get rid of</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
