--- a/Website/resources.html
+++ b/Website/resources.html
@@ -7,6 +7,11 @@
 <html>
 	<head>
 		<title>PTSD Resources</title>
+		<style>
+				.underlined-text {
+            	text-decoration: underline;
+        	}
+		</style>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,10 +38,15 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Find Help</h1>
-							<h1></h1>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major" style="margin-bottom: 30px;">Find Help</h1>
+							<p>Remember, you don't have to go through it alone. There are caring professionals and resources available to support you on your path to healing.</p>
+							<h2>Crisis Hotlines</h2>
+							<p style="margin-bottom: 10px;">If you are thinking about harming yourself or others, please call one of the hotlines below</p>
+									<ul>
+										<li style="color: white;">Crisis Connection: Call <b class="underlined-text">206-461-3222</b></li>
+										<li style="color: white;">24 Hour Suicide & Crisis Lifeline: Call <b class="underlined-text">988</b></li>
+											<li style="color: white;">Trans Lifeline: Call <b class="underlined-text">877-565-8860</b></li>
+									</ul>
 						</div>
 					</section>
 
