added more to resources

--- a/Website/resources.html
+++ b/Website/resources.html
@@ -43,10 +43,17 @@
 							<h2>Crisis Hotlines</h2>
 							<p style="margin-bottom: 10px;">If you are thinking about harming yourself or others, please call one of the hotlines below</p>
 									<ul>
-										<li style="color: white;">Crisis Connection: Call <b class="underlined-text">206-461-3222</b></li>
-										<li style="color: white;">24 Hour Suicide & Crisis Lifeline: Call <b class="underlined-text">988</b></li>
-											<li style="color: white;">Trans Lifeline: Call <b class="underlined-text">877-565-8860</b></li>
+										<li style="color: white;">Crisis Connection: Call <b>(206)-461-3222</b></li>
+										<li style="color: white;">24 Hour Suicide & Crisis Lifeline: Call <b>988</b></li>
+											<li style="color: white;">Trans Lifeline: Call <b>(877)-565-8860</b></li>
 									</ul>
+									<h2>Mental Health Service Providers</h2>
+									<p style="margin-bottom: 10px;">For non-crisis help, take the time visit one of the links below</p>
+											<ul>
+												<li style="color: white;"><a class="underlined-text" href="https://mindfulhealthsolutions.com/location/seattle/">Seattle Mental Health Clinic</a></li>
+												<li style="color: white;"><a class="underlined-text" href="https://kingcounty.gov/en/legacy/depts/community-human-services/mental-health-substance-abuse/services/mental-health">King County Mental Health Servicese</a></li>
+												<li style="color: white;"><a class="underlined-text" href="https://www.zocdoc.com/therapist-counselors/seattle-219852pm">Zodoc: Book Local Doctors and Professionals</a></li>
+											</ul>
 						</div>
 					</section>
 
