--- a/Website/resources.html
+++ b/Website/resources.html
@@ -47,13 +47,20 @@
 										<li style="color: white;">24 Hour Suicide & Crisis Lifeline: Call <b>988</b></li>
 											<li style="color: white;">Trans Lifeline: Call <b>(877)-565-8860</b></li>
 									</ul>
-									<h2>Mental Health Service Providers</h2>
-									<p style="margin-bottom: 10px;">For non-crisis help, take the time visit one of the links below</p>
-											<ul>
-												<li style="color: white;"><a class="underlined-text" href="https://mindfulhealthsolutions.com/location/seattle/">Seattle Mental Health Clinic</a></li>
-												<li style="color: white;"><a class="underlined-text" href="https://kingcounty.gov/en/legacy/depts/community-human-services/mental-health-substance-abuse/services/mental-health">King County Mental Health Servicese</a></li>
-												<li style="color: white;"><a class="underlined-text" href="https://www.zocdoc.com/therapist-counselors/seattle-219852pm">Zodoc: Book Local Doctors and Professionals</a></li>
-											</ul>
+							<h2>Mental Health Service Providers</h2>
+							<p style="margin-bottom: 10px;">For non-crisis help, take the time visit one of the links below</p>
+									<ul>
+										<li style="color: white;"><a class="underlined-text" href="https://mindfulhealthsolutions.com/location/seattle/">Seattle Mental Health Clinic</a></li>
+										<li style="color: white;"><a class="underlined-text" href="https://kingcounty.gov/en/legacy/depts/community-human-services/mental-health-substance-abuse/services/mental-health">King County Mental Health Servicese</a></li>
+										<li style="color: white;"><a class="underlined-text" href="https://www.zocdoc.com/therapist-counselors/seattle-219852pm">Zodoc: Book Local Doctors and Professionals</a></li>
+									</ul>
+							<h2>Addiction Services</h2>
+							<p style="margin-bottom: 10px;">If you or a loved one are suffering from addiction, time is of the essence. Reach out now</p>
+									<ul>
+										<li style="color: white;">SAMHSA National Helpline: Call <b>1-(800)-662-4357</b></li>
+										<li style="color: white;"><a class="underlined-text" href="https://hope.hazeldenbettyford.org/ga-wa/?utm_source=googleppc&utm_medium=cpc&utm_campaign=Google_PPC_|_Washington_|_Treatment_|_Non-branded&utm_content=Drug_Rehab&utm_term=rehab%20drug&gclid=CjwKCAjw-KipBhBtEiwAWjgwrHuhgPmjWIuyd-BvOfy5aTAwjm1J_jl-oUX94sxMc4E8KIZ-7WE9oRoCFO8QAvD_BwE">Hazelden Betty Ford Foundation</a></li>
+											<li style="color: white;">Washington Recovery Helpline: Call <b>1-(866)-789-1511</b></li>
+									</ul>
 						</div>
 					</section>
 
