--- a/Website/generic.html
+++ b/Website/generic.html
@@ -16,31 +16,48 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">PTSD</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic.html" class="active">Survey</a></li>
+						<li><a href="elements.html">generic</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+
+	
+
+			<div id="wrapper"
 
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">Tell us more...</h1>
+						
+							<p>Take a couple minutes to answer a few questions so we can know you better</p>
 						</div>
 					</section>
 
 			</div>
+			<!DOCTYPE html>
+			<html>
+			<head>
+					<link rel="stylesheet" type="text/css" href="styles.css">
+			</head>
+			<body>
+				<div class="quiz-container">
+					<h1>What do you need most right now?</h1>
+			<div id="quiz" class="question-container"></div>
+			</div>
 
+			
+    <script src="quiz.js"></script>
+</body>
+
+</html>
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
