make link go to resource

--- a/Website/index.html
+++ b/Website/index.html
@@ -64,7 +64,7 @@
 									<h2>Your Resources</h2>
 									<p>We're here to help...</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Click for Resources</a></li>
+										<li><a href="resources.html" class="button">Click for Resources</a></li>
 									</ul>
 								</div>
 							</div>
