--- a/Website/resources.html
+++ b/Website/resources.html
@@ -11,13 +11,14 @@
 				.underlined-text {
             	text-decoration: underline;
         	}
+			
 		</style>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" style="background-color: #493382;">
 
 		<!-- Header -->
 			<header id="header">
@@ -38,23 +39,23 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major" style="margin-bottom: 30px;">Find Help</h1>
+							<h1 class="major" style="margin-bottom: 30px; color: white;">Find Help</h1>
 							<p>Remember, you don't have to go through it alone. There are caring professionals and resources available to support you on your path to healing.</p>
-							<h2>Crisis Hotlines</h2>
-							<p style="margin-bottom: 10px;">If you are thinking about harming yourself or others, please call one of the hotlines below</p>
+							<h2 style="color: white";>Crisis Hotlines</h2>
+							<p style="margin-bottom: 10px; ">If you are thinking about harming yourself or others, please call one of the hotlines below</p>
 									<ul>
 										<li style="color: white;">Crisis Connection: Call <b>(206)-461-3222</b></li>
 										<li style="color: white;">24 Hour Suicide & Crisis Lifeline: Call <b>988</b></li>
 											<li style="color: white;">Trans Lifeline: Call <b>(877)-565-8860</b></li>
 									</ul>
-							<h2>Mental Health Service Providers</h2>
+							<h2 style="color: white;">Mental Health Service Providers</h2>
 							<p style="margin-bottom: 10px;">For non-crisis help, take the time visit one of the links below</p>
 									<ul>
 										<li style="color: white;"><a class="underlined-text" href="https://mindfulhealthsolutions.com/location/seattle/">Seattle Mental Health Clinic</a></li>
 										<li style="color: white;"><a class="underlined-text" href="https://kingcounty.gov/en/legacy/depts/community-human-services/mental-health-substance-abuse/services/mental-health">King County Mental Health Servicese</a></li>
 										<li style="color: white;"><a class="underlined-text" href="https://www.zocdoc.com/therapist-counselors/seattle-219852pm">Zodoc: Book Local Doctors and Professionals</a></li>
 									</ul>
-							<h2>Addiction Services</h2>
+							<h2 style="color: white;">Addiction Services</h2>
 							<p style="margin-bottom: 10px;">If you or a loved one are suffering from addiction, time is of the essence. Reach out now</p>
 									<ul>
 										<li style="color: white;">SAMHSA National Helpline: Call <b>1-(800)-662-4357</b></li>
