made log page and link from main

--- a/Website/index.html
+++ b/Website/index.html
@@ -75,7 +75,7 @@
 									<h2>Track your mood patterns...</h2>
 									<p>Log your daily moods to better understand your feelings...</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Track now</a></li>
+										<li><a href="log.html" class="button">Track now</a></li>
 									</ul>
 								</div>
 							</div>
@@ -120,9 +120,6 @@
 									<p>Although cliché, take a couple minutes out of your day to journal about literally anything you want</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
