--- a/Website/generic.html
+++ b/Website/generic.html
@@ -20,8 +20,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic.html" class="active">Survey</a></li>
+						<li><a href="log.html">Mood Log</a></li>
 						<li><a href="resources.html">Health Resources</a></li>
 
 					</ul>
