--- a/Website/log.html
+++ b/Website/log.html
@@ -26,9 +26,9 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-						<li><a href="resources.html"class="active">Health Resources</a></li>
+						<li><a href="generic.html">Survey</a></li>
+						<li><a href="log.html"class="active">Mood Log</a></li>
+						<li><a href="resources.html">Health Resources</a></li>
 					</ul>
 				</nav>
 			</header>
