--- a/Website/log.html
+++ b/Website/log.html
@@ -39,29 +39,10 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major" style="margin-bottom: 30px; color: white;">Find Help</h1>
-							<p>Remember, you don't have to go through it alone. There are caring professionals and resources available to support you on your path to healing.</p>
-							<h2 style="color: white";>Crisis Hotlines</h2>
-							<p style="margin-bottom: 10px; ">If you are thinking about harming yourself or others, please call one of the hotlines below</p>
-									<ul>
-										<li style="color: white;">Crisis Connection: Call <b>(206)-461-3222</b></li>
-										<li style="color: white;">24 Hour Suicide & Crisis Lifeline: Call <b>988</b></li>
-											<li style="color: white;">Trans Lifeline: Call <b>(877)-565-8860</b></li>
-									</ul>
-							<h2 style="color: white;">Mental Health Service Providers</h2>
-							<p style="margin-bottom: 10px;">For non-crisis help, take the time visit one of the links below</p>
-									<ul>
-										<li style="color: white;"><a class="underlined-text" href="https://mindfulhealthsolutions.com/location/seattle/">Seattle Mental Health Clinic</a></li>
-										<li style="color: white;"><a class="underlined-text" href="https://kingcounty.gov/en/legacy/depts/community-human-services/mental-health-substance-abuse/services/mental-health">King County Mental Health Servicese</a></li>
-										<li style="color: white;"><a class="underlined-text" href="https://www.zocdoc.com/therapist-counselors/seattle-219852pm">Zodoc: Book Local Doctors and Professionals</a></li>
-									</ul>
-							<h2 style="color: white;">Addiction Services</h2>
-							<p style="margin-bottom: 10px;">If you or a loved one are suffering from addiction, time is of the essence. Reach out now</p>
-									<ul>
-										<li style="color: white;">SAMHSA National Helpline: Call <b>1-(800)-662-4357</b></li>
-										<li style="color: white;"><a class="underlined-text" href="https://hope.hazeldenbettyford.org/ga-wa/?utm_source=googleppc&utm_medium=cpc&utm_campaign=Google_PPC_|_Washington_|_Treatment_|_Non-branded&utm_content=Drug_Rehab&utm_term=rehab%20drug&gclid=CjwKCAjw-KipBhBtEiwAWjgwrHuhgPmjWIuyd-BvOfy5aTAwjm1J_jl-oUX94sxMc4E8KIZ-7WE9oRoCFO8QAvD_BwE">Hazelden Betty Ford Foundation</a></li>
-											<li style="color: white;">Washington Recovery Helpline: Call <b>1-(866)-789-1511</b></li>
-									</ul>
+                            
+							<h1 class="major" style="margin-bottom: 30px; color: white; font-size: 25px;">Mood Log: A visual representation of your journey to wellbeing</h1>
+							<div id="output"></div>
+                            <ul class="mood-box-header">uh</ul>
 						</div>
 					</section>
 
@@ -78,6 +59,15 @@
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
+            <script>
+                const jsonString = '[1, 2, 3, 4, 5]';
+                const jsonArray = JSON.parse(jsonString);
+                jsonArray.push(6);
+                const updatedJsonString = JSON.stringify(jsonArray);
+                
+                // Display the result
+                document.getElementById('output').textContent = updatedJsonString;
+            </script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
