--- a/Website/generic.html
+++ b/Website/generic.html
@@ -9,8 +9,10 @@
 		<title>Generic - Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" type="text/css" href="main.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" type="text/css" href="genstyle.css">
+		
 
 	</head>
 	<body class="is-preload">
