--- a/Website/index.html
+++ b/Website/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -37,6 +32,7 @@
         <!-- Intro -->
         <section id="intro" class="wrapper style1 fullscreen fade-up">
             <div class="inner">
+                <h7>PTSD</h7>
                 <h1>Peace Tranquility Safety Delight</h1>
                 <p>We're going to give you PTSD<br /> but like the good one, not the one you're trying to get rid of</p>
                 <ul class="actions">
