--- a/Website/index.html
+++ b/Website/index.html
@@ -88,33 +88,33 @@
                 <p>Take the next step towards PTSD by practicing these methods. Start today.</p>
                 <div class="features">
                     <section>
-                        <span class="icon solid major fa-code"></span>
+                        <span class="icon solid major fa-heart"></span>
                         <h3>Count Your Blessings...</h3>
                         <p>Think of at least 3 things you are grateful for today</p>
                     </section>
                     <section>
-                        <span class="icon solid major fa-lock"></span>
+                        <span class="icon solid major fa-cloud"></span>
                         <h3>Get some fresh air...</h3>
                         <p>Go outside and enjoy nature for a few minutes everyday</p>
                     </section>
                     <section>
-                        <span class="icon solid major fa-cog"></span>
+                        <span class="icon solid major fa-wind"></span>
                         <h3>Breathe...</h3>
                         <p>8 second inhales, hold for 3 seconds, then exhale for 7 seconds. Repeat for one minute
                         </p>
                     </section>
                     <section>
-                        <span class="icon solid major fa-desktop"></span>
+                        <span class="icon solid major fa-pizza-slice"></span>
                         <h3>Food for thought...</h3>
                         <p>Eat a cookie. Or a snack. Just get some food in your system</p>
                     </section>
                     <section>
-                        <span class="icon solid major fa-link"></span>
+                        <span class="icon solid major fa-plug"></span>
                         <h3>Do a reset</h3>
                         <p>Take a shower, put on facemasks, do anything to feel more refreshed</p>
                     </section>
                     <section>
-                        <span class="icon major fa-gem"></span>
+                        <span class="icon solid major fa-marker"></span>
                         <h3>Take a brain dump</h3>
                         <p>Although cliché, take a couple minutes out of your day to journal about literally anything you want</p>
                     </section>
