--- a/Website/generic.html
+++ b/Website/generic.html
@@ -5,57 +5,90 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" type="text/css" href="main.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="stylesheet" type="text/css" href="genstyle.css">
-		
 
-	</head>
-	<body class="is-preload">
-
-		<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="title">PTSD</a>
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Survey</a></li>
-						<li><a href="log.html">Mood Log</a></li>
-						<li><a href="resources.html">Health Resources</a></li>
-
-					</ul>
-				</nav>
-			</header>
-
-
-
-
-<h1>Hello,</h1>
-<form id="quiz-form">
-    <p>How are you feeling today?</p>
-    <input type="text" id="answer" placeholder="Enter your answer here">
-    <input type="submit" value="Submit">
-</form>
-
-<script>
-    document.getElementById('quiz-form').addEventListener('submit', function (e) {
-        e.preventDefault(); // Prevent form submission
-
-        const answer = document.getElementById('answer').value.toLowerCase();
-
-        let outcome = '';
-        if (answer === 'happy') {
-            outcome = 'I am glad you feel happy today! Reflect on something that made you feel happy :)';
-        } else {
-            outcome = 'I want to know more of why you feel that way. Please click the chat box in the bottom right corner to talk!';
+<head>
+    <title>Checking in!</title>
+    <style>
+        .underlined-text {
+            text-decoration: underline;
         }
+    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="icon" type="image/png" href="images/snowball_favicon.PNG">
+</head>
 
-        document.getElementById('result').textContent = outcome;
-    });
-</script>
+<body class="is-preload" style="background-color: #493382;">
 
-<p id="result"></p>
+    <!-- Header -->
+    <header id="header">
+        <a href="index.html" class="title">SURVEY</a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="generic.html" class="active">Survey</a></li>
+                <li><a href="log.html">Mood Log</a></li>
+                <li><a href="resources.html">Health Resources</a></li>
+
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Wrapper -->
+    <div id="wrapper">
+
+        <!-- Main -->
+        <section id="main" class="wrapper">
+            <div class="inner">
+                <h1 style="line-height: 0.5;">Hello,</h1>
+                <h3 style="line-height: 2.5;">How are your feeling today?</h3>
+                <input type="text" id="answer" placeholder="Enter your answer here">
+                <input type="submit" value="Submit">
+                <script>
+                    document.getElementById('quiz-form').addEventListener('submit', function(e) {
+                        e.preventDefault(); // Prevent form submission
+
+                        const answer = document.getElementById('answer').value.toLowerCase();
+
+                        let outcome = '';
+                        if (answer === 'happy') {
+                            outcome = 'I am glad you feel happy today! Reflect on something that made you feel happy :)';
+                        } else {
+                            outcome = 'I want to know more of why you feel that way. Please click the chat box in the bottom right corner to talk!';
+                        }
+
+                        document.getElementById('result').textContent = outcome;
+                    });
+                </script>
+                <p id="result"></p>
+
+
+            </div>
+        </section>
+
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer" class="wrapper alt">
+        <div class="inner">
+            <ul class="menu">
+                <li>&copy; Untitled. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
+</body>
+
+</html>
