--- a/Website/generic.html
+++ b/Website/generic.html
@@ -24,7 +24,7 @@
 
     <!-- Header -->
     <header id="header">
-        <a href="index.html" class="title">SURVEY</a>
+        <a href="index.html" class="title">Survey</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -88,6 +88,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/chatbot.js"></script>
 
 </body>
 
