--- a/Website/resources.html
+++ b/Website/resources.html
@@ -88,6 +88,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/chatbot.js"></script>
 
 </body>
 
