--- a/Website/generic.html
+++ b/Website/generic.html
@@ -46,7 +46,7 @@
 				<h3 style="line-height: 2;">How are you feeling today?</h3>
 				<form id="quiz-form">
 					<input type="text" id="answer" placeholder="Enter your answer here">
-					<input type="submit" value="Submit">
+					<input style="margin-top: 20px;" type="submit" value="Submit">
 				</form>
 				<script>
 					document.getElementById('quiz-form').addEventListener('submit', function(e) {
@@ -55,8 +55,8 @@
 						const answer = document.getElementById('answer').value.toLowerCase();
 	
 						let outcome = '';
-						if (answer === 'happy') {
-							outcome = 'I am glad you feel happy today! Reflect on something that made you feel happy :)';
+						if (answer === 'happy' || answer === 'excited' || answer === 'great') {
+							outcome = 'I am glad you feel happy today! Reflect on something that made you feel happy :) Feel free to look through our 6 methods towards achieving PTSD on our home page. Have a lovely day!';
 						} else {
 							outcome = 'I want to know more about why you feel that way. Please click the chat box in the bottom right corner to talk!';
 						}
@@ -64,23 +64,15 @@
 						document.getElementById('result').textContent = outcome;
 					});
 				</script>
-				<p id="result"></p>
+				<p id="result" style="margin-top: 10px;"> <!-- Add margin-top here --></p>
 			</div>
 		</section>
 	</div>
 	
+	
 
 
 
-    <!-- Footer -->
-    <footer id="footer" class="wrapper alt">
-        <div class="inner">
-            <ul class="menu">
-                <li>&copy; Untitled. All rights reserved.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            </ul>
-        </div>
-    </footer>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
