adding mood buttons

--- a/Website/generic.html
+++ b/Website/generic.html
@@ -64,6 +64,13 @@
                 </script>
                 <p id="result"></p>
 
+                <button class="mood-button" data-mood="happy">Happy</button>
+                <button class="mood-button" data-mood="sad">Sad</button>
+                <button class="mood-button" data-mood="angry">Angry</button>
+                <button class="mood-button" data-mood="excited">Excited</button>
+
+
+
 
             </div>
         </section>
@@ -89,6 +96,7 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/chatbot.js"></script>
+    <script src="assets/js/survey.js"></script>
 
 </body>
 
