--- a/Website/log.html
+++ b/Website/log.html
@@ -49,7 +49,8 @@
                     <ul class="mood-box-header">How would you rate today? Come back tomorrow to see how it compares</ul>
                 </div>
                 <div class="button-container">
-                    <img src="/images/snowball lay down sad.png" alt="snowball sad">
+                    
+                   <img src="images/snowball lay down sad.png" alt="" width="60px"/>
                     <button class="number-button" id="button1">1</button>
                     <button class="number-button" id="button2">2</button>
                     <button class="number-button" id="button3">3</button>
@@ -60,6 +61,7 @@
                     <button class="number-button" id="button8">8</button>
                     <button class="number-button" id="button9">9</button>
                     <button class="number-button" id="button10">10</button>
+                    <img src="images/Snowball happy.png" alt="" width="60px" height="100%"/>
                 </div>
                 <canvas id="barChart" width="400" height="200"><div id="output"></div></canvas>
 
