--- a/Website/generic.html
+++ b/Website/generic.html
@@ -37,49 +37,48 @@
     </header>
 
     <!-- Wrapper -->
-	<div id="wrapper">
+    <div id="wrapper">
 
-		<!-- Main -->
-		<section id="main" class="wrapper">
-			<div class="inner">
-				<h1 style="line-height: 0.5;">Hello,</h1>
-				<h3 style="line-height: 2;">How are you feeling today?</h3>
-				<form id="quiz-form">
-					<input type="text" id="answer" placeholder="Enter your answer here">
-					<input style="margin-top: 20px;" type="submit" value="Submit">
-				</form>
-				<script>
-					document.getElementById('quiz-form').addEventListener('submit', function(e) {
-						e.preventDefault(); // Prevent form submission
-	
-						const answer = document.getElementById('answer').value.toLowerCase();
-	
-						let outcome = '';
-						if (answer === 'happy' || answer === 'excited' || answer === 'great') {
-							outcome = 'I am glad you feel happy today! Reflect on something that made you feel happy :) Feel free to look through our 6 methods towards achieving PTSD on our home page. Have a lovely day!';
-						} else {
-							outcome = 'I want to know more about why you feel that way. Please click the chat box in the bottom right corner to talk!';
-						}
-	
-						document.getElementById('result').textContent = outcome;
-					});
-				</script>
-				<p id="result" style="margin-top: 10px;"> <!-- Add margin-top here --></p>
-			</div>
-		</section>
-	</div>
-	
-	
+        <!-- Main -->
+        <section id="main" class="wrapper">
+            <div class="inner">
+                <h1 style="line-height: 0.5;">Hello,</h1>
+                <h3 style="line-height: 2;">How are you feeling today?</h3>
+                <form id="quiz-form">
+                    <input type="text" id="answer" placeholder="Enter your answer here">
+                    <input style="margin-top: 20px;" type="submit" value="Submit">
+                </form>
+                <script>
+                    document.getElementById('quiz-form').addEventListener('submit', function(e) {
+                        e.preventDefault(); // Prevent form submission
+
+                        const answer = document.getElementById('answer').value.toLowerCase();
+
+                        let outcome = '';
+                        if (answer === 'happy' || answer === 'excited' || answer === 'great') {
+                            outcome = 'I am glad you feel happy today! Reflect on something that made you feel happy :) Feel free to look through our 6 methods towards achieving PTSD on our home page. Have a lovely day!';
+                        } else {
+                            outcome = 'I want to know more about why you feel that way. Please click the chat box in the bottom right corner to talk!';
+                        }
+
+                        document.getElementById('result').textContent = outcome;
+                    });
+                </script>
+                <p id="result" style="margin-top: 10px;">
+                    <!-- Add margin-top here -->
+                </p>
 
                 <button class="mood-button" data-mood="happy">Happy</button>
                 <button class="mood-button" data-mood="sad">Sad</button>
                 <button class="mood-button" data-mood="angry">Angry</button>
                 <button class="mood-button" data-mood="excited">Excited</button>
+            </div>
 
 
+        </section>
 
 
-
+    </div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
