--- a/Website/log.html
+++ b/Website/log.html
@@ -170,6 +170,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/chatbot.js"></script>
 
 </body>
 
