--- a/Website/generic.html
+++ b/Website/generic.html
@@ -72,6 +72,12 @@
                 <button class="mood-button" data-mood="sad">Sad</button>
                 <button class="mood-button" data-mood="angry">Angry</button>
                 <button class="mood-button" data-mood="excited">Excited</button>
+
+                <div class="journal-container">
+                    <textarea id="journal-entry" placeholder="Write your journal entry here"></textarea>
+                    <button id="save-button">Save</button>
+                </div>
+
             </div>
 
 
@@ -90,6 +96,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/chatbot.js"></script>
     <script src="assets/js/survey.js"></script>
+    <script src="assets/js/journal.js"></script>
 
 </body>
 
