changed header to resources + mobile dev

--- a/Website/generic.html
+++ b/Website/generic.html
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="generic.html" class="active">Survey</a></li>
                 <li><a href="log.html">Mood Log</a></li>
-                <li><a href="resources.html">Health Resources</a></li>
+                <li><a href="resources.html">Resources</a></li>
 
             </ul>
         </nav>
