--- a/Website/log.html
+++ b/Website/log.html
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="generic.html">Survey</a></li>
                 <li><a href="log.html" class="active">Mood Log</a></li>
-                <li><a href="resources.html">Health Resources</a></li>
+                <li><a href="resources.html">Resources</a></li>
             </ul>
         </nav>
     </header>
@@ -46,7 +46,7 @@
 
 
                 <div class="mood-box">
-                    <ul class="mood-box-header">How would you rate today? Come back tomorrow to see how it compares</ul>
+                    <ul class="mood-box-header">How would you rate today?</ul>
                 </div>
                 <div class="button-container">
                     
