--- a/Website/resources.html
+++ b/Website/resources.html
@@ -31,7 +31,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="generic.html">Survey</a></li>
                 <li><a href="log.html">Mood Log</a></li>
-                <li><a href="resources.html" class="active">Health Resources</a></li>
+                <li><a href="resources.html" class="active">Resources</a></li>
             </ul>
         </nav>
     </header>
