--- a/Website/generic.html
+++ b/Website/generic.html
@@ -9,9 +9,42 @@
 <head>
     <title>Checking in!</title>
     <style>
+		#result {
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+			margin-top: 30px;
+			color: white;
+			font-size: 25px;
+        }
         .underlined-text {
             text-decoration: underline;
         }
+		.mood-button-box{
+			display: flex;
+			justify-content: space-between;
+			margin-left: 400px;
+			margin-right: 400px;
+			margin-bottom: 30px;
+		}
+		.mood-button-2{
+			background-color: #261c3e;
+                    color: #fff;
+                    border: none;
+                    border-radius: 4px;
+                    padding: 10px 20px;
+                    cursor: pointer;
+                    text-align: center;
+                    /* Center the text horizontally */
+                    vertical-align: middle;
+                    /* Center the text vertically */
+                    line-height: 1;
+                    /* Reset line height to avoid extra vertical spacing */
+		}
+		.mood-button-2:hover{
+			background-color: #463470;
+		}
     </style>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -40,22 +73,22 @@
 		<!-- Main -->
 		<section id="main" class="wrapper">
 			<div class="inner">
-				<h1 style="line-height: 0.5;">Hello,</h1>
-				<h3 style="line-height: 2;">How are you feeling today?</h3>
+				<h1 style="line-height: 0.5;">Hello, how are you feeling today?</h1>
 				
-				<p id="result" style="margin-top: 10px;"> <!-- Add margin-top here --></p>
+				
 			</div>
 		</section>
 	</div>
 	
 	
-
-                <button class="mood-button" data-mood="happy">Happy</button>
-                <button class="mood-button" data-mood="sad">Sad</button>
-                <button class="mood-button" data-mood="angry">Angry</button>
-                <button class="mood-button" data-mood="excited">Excited</button>
-
-                <div class="journal-container">
+				<div class="mood-button-box">
+                <button class="mood-button-2" data-mood="happy">Happy</button>
+                <button class="mood-button-2" data-mood="sad">Sad</button>
+                <button class="mood-button-2" data-mood="angry">Angry</button>
+                <button class="mood-button-2" data-mood="excited">Excited</button>
+				</div>
+                <p id="result" style="margin-top: 10px;"> <!-- Add margin-top here --></p>
+				<div class="journal-container">
                     <textarea id="journal-entry" placeholder="Write your journal entry here"></textarea>
                     <button id="save-button">Save</button>
                 </div>
