added buttons on survey page

--- a/Website/generic.html
+++ b/Website/generic.html
@@ -24,8 +24,8 @@
 		.mood-button-box{
 			display: flex;
 			justify-content: space-between;
-			margin-left: 400px;
-			margin-right: 400px;
+			margin-left: 200px;
+			margin-right: 200px;
 			margin-bottom: 30px;
 		}
 		.mood-button-2{
@@ -84,8 +84,13 @@
 				<div class="mood-button-box">
                 <button class="mood-button-2" data-mood="happy">Happy</button>
                 <button class="mood-button-2" data-mood="sad">Sad</button>
-                <button class="mood-button-2" data-mood="angry">Angry</button>
                 <button class="mood-button-2" data-mood="excited">Excited</button>
+                <button class="mood-button-2" data-mood="angry">Angry</button>
+				<button class="mood-button-2" data-mood="frustrated">Frustrated</button>
+				<button class="mood-button-2" data-mood="lonely">Lonely</button>
+				<button class="mood-button-2" data-mood="tired">Tired</button>
+
+
 				</div>
                 <p id="result" style="margin-top: 10px;"> <!-- Add margin-top here --></p>
 				<div class="journal-container">
